<resources>
    <string name="app_name">IngSoft App Mobiles</string>
    <string name="nav_title_albums">Álbumes</string>
    <string name="title_albums">Listado de Álbumes</string>
    <string name="title_album">Álbum</string>
    <string name="title_album_detail_fragment">Detalles de Álbum</string>
    <string name="title_artist_detail_fragment">Detalles de Artista</string>
    <string name="title_collector_detail_fragment">Detalles de Coleccionista</string>
    <string name="nav_title_artists">Artistas</string>
    <string name="title_artists">Listado de Artistas</string>
    <string name="nav_title_collectors">Coleccionistas</string>
    <string name="title_collectors">Listado de Coleccionistas</string>
    <string name="title_collector_email_label">Email: </string>
    <string name="title_collector_phone_label">Teléfono: </string>
    <string name="type_artist_band">Grupo</string>
    <string name="type_artist_musician">Solista</string>
    <string name="add_album_description">Crear álbum</string>
    <string name="name">Nombre</string>
    <string name="track_name_hint">Nombre de la canción</string>
    <string name="image">Imagen</string>
    <string name="release_date">Fecha de lanzamiento</string>
    <string name="desc">Descripción</string>
    <string name="cancel_button">Cancelar</string>
    <string name="create_button">Crear</string>
    <string name="title_create_album">Nuevo Álbum</string>
    <string name="title_create_track">Crear Canción</string>
    <string name="create_track_button_label">Canción</string>
    <string name="track_duration_label">Duración: </string>
    <string name="track_duration_description">Duración de la canción</string>
    <string name="minutes_hint">Duración en minutos</string>
    <string name="seconds_hint">Duración en segundos</string>
    <string name="selector_genero">Seleccione un Género</string>
    <string name="disquera">Casa Discrográfica</string>
...
