...

        <!--<com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_track_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

        </com.google.android.material.textfield.TextInputLayout>-->

...
                android:layout_marginEnd="5dp"
                android:layout_weight=".5"
                android:text="@string/cancel_button"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/track_create_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_weight=".5"
                android:text="@string/create_button"
...
